--- a/00 - Practice Folder/02 - Wordpress Theme Development/style.css
+++ b/00 - Practice Folder/02 - Wordpress Theme Development/style.css
@@ -184,4 +184,46 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
     width: 100%;
     height: auto;
     margin-bottom: 0.5em;
+  } 
+
+  .comments{
+    border: 1px #ccc solid;
+    padding: 10px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+  }
+
+  .comments h3, .comments h2{
+    background-color: #f4f4f4;
+    color: #333;
+    padding: 5px;
+  }
+
+  .comment-body{
+    border: #ccc solid 1px;
+    margin-bottom: 10px;
+    padding: 20px 10px;
+  }
+
+  .comment-meta{
+    background-color: #428bca;
+    color:#fff;
+    padding: 10px;
+  }
+
+  .comment-meta a{
+    color: #fff;
+  }
+  .comment-reply-link{
+    background-color: #428bca;
+    color: #fff;
+    display: inline-block;
+    padding: 10px 15px;
+  }
+
+  .comment-form input, .comment-form textarea{
+    width: 100%;
+    padding: 4px;
+    border: #ccc solid 1px;
+    margin-bottom: 15px;
   }
