--- a/00 - Practice Folder/02 - Wordpress Theme Development/style.css
+++ b/00 - Practice Folder/02 - Wordpress Theme Development/style.css
@@ -143,7 +143,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
     border-bottom: #cccccc 1px solid;
     margin-bottom: 30px;
     color: #fff;
-    background: url('../img/showcase.jpg') no-repeat center center;
+    background: #333 url('../img/showcase.jpg') no-repeat center center;
   }
 
   .showcase h1{
